syntax = "proto3";
option csharp_namespace = "Qube.EventStore";

package Greet;

service StreamService {
  rpc QueryStreamAsync (QueryEnvelope) returns (stream EventEnvelope);
}

message QueryEnvelope {
  string payload = 1;
  string typeIn = 2;
  string typeOut = 3;
}

message EventEnvelope {
  string payload = 1;
  string error = 2;
}
